Update Donate link to external donation form

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ html, body { margin: 0; padding: 0; }
             <a href="#mission">The Story</a>
             <a href="#origin">Legacy & Rare Tree</a>
             <a href="#miracle">Blessed Grace</a>
-            <a href="#partnership">Partnership</a> <a href="#donate" class="btn-donate-nav">Donate</a>
+            <a href="#partnership">Partnership</a> <a href="https://www.zeffy.com/en-US/donation-form/legacy-1892-coffee-donation" class="btn-donate-nav">Donate</a>
         </div>
     </nav>
 
