--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ html, body { margin: 0; padding: 0; }
 
     <header class="hero" id="home">
         <video autoplay muted loop playsinline poster="img/04fb3e62-69fa-4ae2-a6e1-d7d4833bda54.JPG">
-            <source src="img/Legacy1892.MP4" type="video/mp4">
+            <source src="img/legacy1892.MP4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         
@@ -688,7 +688,7 @@ html, body { margin: 0; padding: 0; }
                         <strong>God miraculously shielded his place during the 2025 Pacific Palisades fire</strong> 
                         while the entire neighborhood burned. 
                     </p>
-                    <img class="miracle-img" src="img/LAfire.jpg" alt="LA fire" loading="lazy">
+                    <img class="miracle-img" src="img/lafire.jpg" alt="LA fire" loading="lazy">
                     <br>
                     <p class="serif-italic">
                         Each sip offers peace, reflecting His protective grace, a truly very blessed coffee bean.
