--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <meta property="og:title" content="Legacy 1892 Coffee | Legacy1892.coffee">
     <meta property="og:description" content="Pristine coffee from rare 1892 Arabica trees, preserved by Christian priests. Support AppChurch Global Foundation’s preservation mission and receive a gift bag with your donation.">
     <meta property="og:url" content="https://legacy1892.coffee/">
-    <meta property="og:image" content="https://legacy1892.coffee/img/04fb3e62-69fa-4ae2-a6e1-d7d4833bda54.JPG">
+    <meta property="og:image" content="https://legacy1892.coffee/img/redbean.jpg">
     <meta property="og:image:alt" content="Legacy 1892 Coffee">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Legacy 1892 Coffee | Legacy1892.coffee">
     <meta name="twitter:description" content="Pristine coffee from rare 1892 Arabica trees, preserved by Christian priests. Support AppChurch Global Foundation’s preservation mission and receive a gift bag with your donation.">
-    <meta name="twitter:image" content="https://legacy1892.coffee/img/04fb3e62-69fa-4ae2-a6e1-d7d4833bda54.JPG">
+    <meta name="twitter:image" content="https://legacy1892.coffee/img/redbean.JPG">
 
     <!-- Icons -->
     <link rel="icon" href="favicon.ico">
@@ -640,10 +640,9 @@ html, body { margin: 0; padding: 0; }
         </div>
     </nav>
 
-    <header class="hero" id="home" style="--hero-poster: url('img/04fb3e62-69fa-4ae2-a6e1-d7d4833bda54.JPG');">
-        <video id="heroVideo" class="hero-video" autoplay muted loop playsinline webkit-playsinline preload="auto" poster="img/04fb3e62-69fa-4ae2-a6e1-d7d4833bda54.JPG" aria-hidden="true" tabindex="-1">
+    <header class="hero" id="home" style="--hero-poster: url('img/redbean.JPG');">
+        <video id="heroVideo" class="hero-video" autoplay muted loop playsinline webkit-playsinline preload="auto" poster="img/redbean.JPG" aria-hidden="true" tabindex="-1">
             <source src="img/legacy1892.mp4" type="video/mp4">
-            <source src="img/legacy1892.MP4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         
@@ -732,7 +731,7 @@ html, body { margin: 0; padding: 0; }
         <div class="container">
             <div class="origin-grid">
                 <div class="origin-img">
-                    <img src="img/Legacy1.JPG" alt="Rare 1892 Coffee Trees" loading="lazy" decoding="async">
+                    <img src="img/legacy1.JPG" alt="Rare 1892 Coffee Trees" loading="lazy" decoding="async">
                 </div>
                 <div class="origin-text">
                     <span class="cinzel gold-text">Preservation Project</span>
