--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@ html, body { margin: 0; padding: 0; }
         <div class="container">
             <div class="origin-grid">
                 <div class="origin-img">
-                    <img src="img/legacy1.JPG" alt="Rare 1892 Coffee Trees" loading="lazy" decoding="async">
+                    <img src="img/legacy1.jpg" alt="Rare 1892 Coffee Trees" loading="lazy" decoding="async">
                 </div>
                 <div class="origin-text">
                     <span class="cinzel gold-text">Preservation Project</span>
